Fixed cannot find symbol error